RESOLVED FIXED35963
input type other than text won't work with autofill
https://bugs.webkit.org/show_bug.cgi?id=35963
Summary input type other than text won't work with autofill
John Sullivan
Reported 2010-03-10 03:52:29 PST
+++ This bug was initially created as a clone of Bug #35895 +++ Unless I change my zipcode fields from input type="number" and my email fields from input type="email" to input type="text" autofill will not populate them
Attachments
Patch to make WebHTMLRepresentation elementDoesAutocomplete return true for any text fields other than passwords. (2.52 KB, patch)
2010-03-10 04:02 PST, John Sullivan
timothy: review+
John Sullivan
Comment 1 2010-03-10 03:54:27 PST
The problem is in -[WebHTMLRepresentation elementDoesAutocomplete:], where only type TEXT is considered.
John Sullivan
Comment 2 2010-03-10 03:59:07 PST
I'll have a patch up later this morning.
John Sullivan
Comment 3 2010-03-10 04:02:16 PST
Created attachment 50388 [details] Patch to make WebHTMLRepresentation elementDoesAutocomplete return true for any text fields other than passwords.
John Sullivan
Comment 4 2010-03-10 05:25:15 PST
Note You need to log in before you can comment on or make changes to this bug.