<rdar://problem/7735387> input type other than text won't work with autofill <https://bugs.webkit.org/show_bug.cgi?id=35963>

Reviewed by Tim Hatcher.

WebKit/mac: 

* WebView/WebHTMLRepresentation.mm:
(-[WebHTMLRepresentation elementDoesAutoComplete:]):
Return true for any text field that's not a password, rather than only
for TEXT type.

WebKit/win: 

* WebFrame.cpp:
(WebFrame::elementDoesAutoComplete):
Return true for any text field that's not a password, rather than only
for TEXT type.



git-svn-id: svn://svn.chromium.org/blink/trunk@55776 bbb929c8-8fbe-4397-9dbb-9b2b20218538