third_party/WebKit/WebKit/mac/WebView/WebHTMLRepresentation.mm
@@ -303,7 +303,8 @@ static HTMLInputElement* inputElementFromDOMElement(DOMElement* element)
 {
     HTMLInputElement* inputElement = inputElementFromDOMElement(element);
     return inputElement
-        && inputElement->inputType() == HTMLInputElement::TEXT
+        && inputElement->isTextField()
+        && inputElement->inputType() != HTMLInputElement::PASSWORD
         && inputElement->autoComplete();
 }
 
