third_party/WebKit/WebKit/win/WebFrame.cpp
@@ -1153,7 +1153,7 @@ HRESULT WebFrame::elementDoesAutoComplete(IDOMElement *element, BOOL *result)
     if (!inputElement)
         *result = false;
     else
-        *result = (inputElement->inputType() == HTMLInputElement::TEXT && inputElement->autoComplete());
+        *result = inputElement->isTextField() && inputElement->inputType() != HTMLInputElement::PASSWORD && inputElement->autoComplete();
 
     return S_OK;
 }
